force-app/main/default/objects/DocGen_Template_Version__c/DocGen_Template_Version__c.object-meta.xml
<CustomObject>
    <description>Stores historical versions of Portwood Templates.</description>
    <label>Portwood Template Version</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portwood Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>