force-app/main/default/objects/DocGen_Template_Version__c/fields/Document_Title_Format__c.field-meta.xml
<CustomField>
    <fullName>Document_Title_Format__c</fullName>
    <description
    >Snapshot of the template's Document Title Format at the time this version was created. Supports merge fields. Render path reads this so each version's output filename matches its authored intent.</description>
    <inlineHelpText
    >Snapshot of the template's title format at version creation. Use {Field} syntax for merge fields.</inlineHelpText>
    <label>Document Title Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>