force-app/main/default/objects/DocGen_Template_Version__c/fields/Footer_Html__c.field-meta.xml
<CustomField>
    <fullName>Footer_Html__c</fullName>
    <description
    >Snapshot of the template's Footer HTML at the time this version was created. Read by the render path so per-version footer changes don't retroactively affect previously authored versions.</description>
    <label>Footer HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>