force-app/main/default/objects/DocGen_Template_Version__c/fields/Header_Html__c.field-meta.xml
<CustomField>
    <fullName>Header_Html__c</fullName>
    <description
    >Snapshot of the template's Header HTML at the time this version was created. Read by the render path so per-version header changes don't retroactively affect previously authored versions.</description>
    <label>Header HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>