force-app/main/default/objects/DocGen_Template_Version__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <description
    >Snapshot of the template's Output Format at the time this version was created. Render path reads this to ensure each version renders with its authored format regardless of subsequent template changes.</description>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native</fullName>
                <label>Native (.docx / .pptx)</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>