force-app/main/default/objects/DocGen_Template_Version__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word</fullName>
                <default>true</default>
                <label>Word</label>
            </value>
            <value>
                <fullName>PowerPoint</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>